<resources>
    <string name="app_name">Vasilev 303 Lab-04 CheckBoxAndDialogWindow</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="infoApple">Apple</string>
    <string name="sds" />
    <string name="infoStrawberry">Strawberry</string>
    <string name="infoBlueBerry">Blueberry</string>
    <string name="infoPotatoes">Potatoes</string>
    <string name="infoCalc">Calculate</string>
</resources>